# src/services/impl/read/CollectionDTOService.js
@@ -1,9 +1,6 @@
 import BaseService from '../../base/BaseService';
 import CollectionSchema from '../../../schemas/CollectionSchema';
-import AttributeDtoService from './AttributeDtoService';
-import { AttributeScope } from '@casimir.one/platform-core';
 
-const attributeDtoService = new AttributeDtoService();
 
 class CollectionDTOService extends BaseService {
 
@@ -11,16 +8,7 @@ class CollectionDTOService extends BaseService {
     super(CollectionSchema, options);
   }
 
-  async mapDTOs(nftCollections, filterObj) {
-    const nftCollectionsAttributes = await attributeDtoService.getAttributesByScope(AttributeScope.NFT_COLLECTION);
-
-    const filter = {
-      searchTerm: "",
-      attributes: [],
-      portalIds: [],
-      ...filterObj
-    }
-
+  async mapDTOs(nftCollections) {
     return nftCollections.map((nftCollection) => {
       return {
         _id: nftCollection._id,
@@ -30,30 +18,7 @@ class CollectionDTOService extends BaseService {
         updatedAt: nftCollection.updatedAt,
         portalId: nftCollection.portalId
       };
-    }) // TODO: Replace with db query
-      .filter(p => !filter.portalIds.length || filter.portalIds.some(portalId => {
-        return p.portalId == portalId;
-      }))
-      .filter(p => !filter.attributes.length || filter.attributes.every(fAttr => {
-        const attribute = nftCollectionsAttributes.find(attr => attr._id.toString() === fAttr.attributeId.toString());
-        if (!attribute)
-          return false;
-
-        const rAttr = p.attributes.find(rAttr => rAttr.attributeId.toString() === fAttr.attributeId.toString());
-        return fAttr.values.some((v) => {
-          if (!rAttr || !rAttr.value)
-            return !v || v === 'false';
-
-          if (Array.isArray(rAttr.value))
-            return rAttr.value.some(rAttrV => rAttrV.toString() === v.toString());
-
-          if (typeof rAttr.value === 'string')
-            return rAttr.value.includes(v.toString());
-
-          return rAttr.value.toString() === v.toString();
-        });
-      }))
-      .sort((a, b) => b.createdAt - a.createdAt);
+    });
   }
 
   async getCollectionDTO(id) {
